# c-data-structures

./: .gitignore  CMakeLists.txt  README.md  build.sh  data_structuresConfig.cmake
data_structures/linkedlist/: linkedlist.h
data_structures/queue/: main.c
data_structures/vector/: vector.c  vector.h
hashtable/: hashtable.c
include/data_structures/: deque.h
queue/: linkedqueue.c
src/: data_structures.h  deque.c  singly_linked_list.h  trie.c  vector.c
src/deque/: deque.c  deque.h  test.c
src/hashmap/: hashmap.c  hashmap.h  main.c
src/heap/: heap.c  heap.h
src/linkedlist/: singly_linked_list.c  singly_linked_list.h
src/map/: map.h
src/trie/: trie.c  trie.h
src/vector/: vector.c  vector.h
tests/: Makefile  deque-test.c  hashmap-test.c  heap-test.c  map-test.c  queue-test.c  singly_linked_list-test.c  trie-test.c  vector-test.c
tests/tester/: tester.c  tester.h
tests/vector/: makefile  test  test.c
vector/: Makefile  test  test.c  vector.c  vector.h
